2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/physfsx.h: use sprintf in PHYSFSX_getRealPath() because
	I couldn't figure out why the previous code kept segfaulting under
	linux.

	* main/kconfig.c: disable call to reset_cockpit() which was
	causing the "letterbox" bug

	* main/inferno.c: don't die if title screens not found

2004-12-02  Martin Schaffner  <maschaffner@gmx.ch>

	* configure.ac: require PhysicsFS header and library

2004-12-02  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bm.c, main/piggy.c: fix cfile bugs from recent changes

	* D2X.make: fix build on Carbon by adding digiobj.c

	* main/mission.c: set builtin_hogsize for non-built-in missions

	* main/mission.c: pass individual mission around instead of whole list

	* main/mission.c: remove mission list from global memory

2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, include/physfsx.h: fix RELEASE build, make sure
	path separator gets added to hogdir

2004-12-01  Bradley Bell  <btb@icculus.org>

	* README, configure.ac, VisualC/d2x/d2x.dsp,
	VisualC/d2xgl/d2xgl.dsp, VisualC/libmve/libmve.dsp,
	VisualC/mveplayer/mveplayer.dsp, include/loadgl.h,
	include/ogl_init.h, include/physfsx.h: Updated MSVC build, now
	uses dynamic opengl loading

2004-12-01  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/ogl/gr.c: make write_bmp use PhysicsFS

	* include/args.h, misc/args.c: new AppendArgs function. This
	separates the copying of the arguments passed to main() from the
	reading of the arguments file

	* include/cfile.h: Use portable PHYSFSX_getRealPath function, Use
	the flexible cfgets, Fix compiling issues in MPW.

	* include/physfsx.h: PHYSFSX_readU8 isn't endian friendly when
	reading into an int, so it's removed completely.  PHYSFSX_getc was
	removed, because it's only use in misc/strio.c was removed.  Put
	in PHYSFSX_getRealPath, which recognises platform-specific
	separators and doesn't use snprintf (MPW doesn't have it).  MPW
	doesn't have statfs.
